# Battleship

./: .gersemirc  CMakeLists.txt  Makefile  main.cpp  vcpkg.json
cmake/: BuildType.cmake  CheckLTO.cmake  Coverage.cmake  Sanitizers.cmake  Warnings.cmake  vcpkg.cmake
lib/: CMakeLists.txt  board.cpp  board.hpp  commands.cpp  commands.h  commands.hpp  game.cpp  game.h  game.hpp  menu.cpp  menu.h  menu.hpp  player.cpp  player.h  player.hpp
src/: CMakeLists.txt  board.cpp  commands.cpp  main.cpp
tests/: CMakeLists.txt  test_driver.cpp
